# ethan-analytics

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  drizzle.config.ts  entrypoint.sh  next.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: docker.yml
docker/: Dockerfile  entrypoint.sh
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: env.mjs  main.rs  middleware.ts  seed.ts
src/app/: layout.tsx  page.tsx
src/app/api/event/: route.ts
src/app/api/seed/: route.ts
src/app/d/[host]/: page.tsx
src/app/hidden/: page.tsx
src/app/sign-in/[[...sign-in]]/: page.tsx
src/app/sign-up/[[...sign-up]]/: page.tsx
src/components/: date-picker.tsx
src/server/: db.ts  schema.ts
src/server/db/: types.ts
