[package]
name = "ethan-analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.8"
default-features = false
features = ["mysql"]

[workspace]
members = ["prisma-cli"]
